k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: helloworld
  labels:
    app: helloworld
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
