k8s/06-angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-ui-service
  namespace: helloworld
  labels:
    app: angular-ui
spec:
  type: ClusterIP
  selector:
    app: angular-ui
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
